--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yijingzhou33.github.io/crwn-clothing",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.4",
+    "gh-pages": "^3.1.0",
     "lodash.memoize": "^4.1.2",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
@@ -39,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predepoly": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
